created core service and added the datagrid onexporting method to it for more reusability

--- a/frontend/src/app/admin/admin-transactions/admin-transactions.component.html
+++ b/frontend/src/app/admin/admin-transactions/admin-transactions.component.html
@@ -85,7 +85,7 @@
       [allowColumnResizing]="true"
       [columnAutoWidth]="true"
       [wordWrapEnabled]="true"
-      (onExporting)="onExporting($event)"
+      (onExporting)="coreService.onExporting($event,getFileName())"
     >
       <dxo-grouping [autoExpandAll]="false"></dxo-grouping>
       <dxo-group-panel [visible]="true"></dxo-group-panel>
