added the casino deposit filter option on the transaction page

--- a/frontend/src/app/admin/admin-transactions/admin-transactions.component.html
+++ b/frontend/src/app/admin/admin-transactions/admin-transactions.component.html
@@ -59,6 +59,7 @@
           <option value="">{{ 'transactions.allBookings' | translate }}</option>
           <option value="Deposit">Deposit</option>
           <option *ngFor="let booking of bookingTypes" [value]="booking">{{ booking }}</option>
+          <option value="Casino games - deposit">Casino games - deposit</option>
         </select>
       </div>
       <div class="filter-group">
